--- a/playposter.html
+++ b/playposter.html
@@ -30,7 +30,7 @@
     day by day is the ultimate goal. As long as there is movement, there is progress."
 </p> -->
 
-<img src="images/playposter1.jpg" alt="Poster Mockup">
+<img src="images/playposter1.png" alt="Poster Mockup">
 <div class="logo-display">
         <img src="https://mir-s3-cdn-cf.behance.net/project_modules/2800_opt_1/3a761d56650641.59b751bdb1b9b.png" alt="Poster">
         <div><h2>Type Inspired Poster</h2>
@@ -42,7 +42,7 @@
         </div>
         </div>
 
-        <img src="images/playposter2.jpg" alt="PosterMockup">
+        <img src="images/playposter2.png" alt="PosterMockup">
 
 <div class="logo-display">
 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/57189656650641.59b751e4672be.jpg" alt="Poster"><div>
