--- a/playposter.html
+++ b/playposter.html
@@ -42,7 +42,7 @@
         </div>
         </div>
 
-        <img src="images/playposter2.png" alt="PosterMockup">
+        <img src="images/playposter2.jpg" alt="PosterMockup">
 
 <div class="logo-display">
 <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/57189656650641.59b751e4672be.jpg" alt="Poster"><div>
