--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Kelsie Dustin—Contact</title>
 </head>
 
-<body>
+<body><button onclick="topFunction()" id="myBtn" title="Go to top">Scroll To Top</button>
     <div class="container">
             <header w3-include-html="header.html">
            
