--- a/musicposters.html
+++ b/musicposters.html
@@ -5,7 +5,7 @@
     <title>Kelsie Dustin—Portfolio</title>
 </head>
 
-<body>
+<body><button onclick="topFunction()" id="myBtn" title="Go to top">Scroll To Top</button>
     <div class="container">
             <header w3-include-html="header.html">
            
@@ -132,6 +132,7 @@
         <script src="scripts/modularize.js"></script>
         <script src="scripts/wayfinding.js"></script>
         <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="scripts/scrollup.js"></script>
 
 
 
