--- a/logos.html
+++ b/logos.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Scroll To Top</button>
     <div class="container">
             <header w3-include-html="header.html">
            
