--- a/rainyday.html
+++ b/rainyday.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Scroll To Top</button>
     <div class="container">
             <header w3-include-html="header.html">
            
@@ -48,6 +49,7 @@
         <script src="scripts/modularize.js"></script>
         <script src="scripts/wayfinding.js"></script>
         <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="scripts/scrollup.js"></script>
 
 
 
