--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
             
                 <ul>
                     <a class="active" href="index.html">
-                        <li>Home </li>
+                        <li>Projects </li>
                     </a>
                     <a href="resume.html">
                             <li>Resume </li>
