--- a/logos.html
+++ b/logos.html
@@ -67,6 +67,7 @@
         <script src="scripts/modularize.js"></script>
         <script src="scripts/wayfinding.js"></script>
         <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="scripts/scrollup.js"></script>
 
 
 
