--- a/header.html
+++ b/header.html
@@ -5,15 +5,15 @@
                     <span></span>
             
                 <ul>
-                    <a class="active" href="index.html">
-                        <li>Projects </li>
-                    </a>
-                    <a href="resume.html">
-                            <li>Resume </li>
-                        </a>
-                    <a href="bio.html">
-                        <li>About </li>
-                    </a>
+                        <li><a class="active" href="index.html">
+                        Projects
+                    </a> </li>
+                    <li><a href="resume.html">
+                            Resume 
+                        </a></li>
+                    <li><a href="bio.html">
+                        About
+                    </a></li>
                 </ul>
             </div>
             </nav>
