--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
                     <span></span>
             
                 <ul>
-                        <li><a class="active" href="index.html">
+                        <li class="active" ><a href="index.html">
                         Projects
                     </a> </li>
                     <li><a href="resume.html">
